--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -96,7 +96,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/instruction_background"
         android:padding="10dp"
-        android:text="Bewegen Sie sich ins Kamerabild, sodass Sie sich selbst sehen."
+        android:text="Drücken Sie den Start Button."
         android:textAlignment="center"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/check"
@@ -110,16 +110,40 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/light_green"
+        android:backgroundTint="@color/light_grey"
         android:insetBottom="0dp"
         android:text="@string/startCalibration"
         android:onClick="continueButtonClicked"
         android:textAlignment="center"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/disabledFont"
+        android:enabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/instruction" />
+
+    <TextView
+        android:id="@+id/simulationLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/Sim"
+        android:textSize="16sp"
+        app:layout_constraintHorizontal_bias="0.136"
+        app:layout_constraintEnd_toStartOf="@+id/SimOnOff"
+        app:layout_constraintTop_toBottomOf="@id/button" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/SimOnOff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="12dp"
+        app:thumbTint="@color/dark_grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <!-- Footer -->
     <include
