--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="light_grey">#e4e6e3</color>
     <color name="dark_grey">#60615f</color>
     <color name="green">#2e6b12</color>
+    <color name="disabledFont">#808080</color>
 </resources>
