--- a/app/src/main/res/layout/camera_view.xml
+++ b/app/src/main/res/layout/camera_view.xml
@@ -81,7 +81,7 @@
         android:id="@+id/gpsValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:text="0.00"
         android:textSize="16sp"
@@ -112,13 +112,13 @@
         android:text="@string/date"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/gpsCoord" />
+        app:layout_constraintTop_toBottomOf="@id/gpsValue" />
 
     <TextView
         android:id="@+id/dateValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:text="0.00"
         android:textSize="16sp"
@@ -142,25 +142,25 @@
         android:id="@+id/check"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="20dp"
         android:src="@drawable/check"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/instructionHeadline" />
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toStartOf="@id/instruction"
+        app:layout_constraintTop_toTopOf="@id/instruction"
+        app:layout_constraintBottom_toBottomOf="@id/instruction"
+        />
 
     <TextView
         android:id="@+id/instruction"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="40dp"
         android:background="@drawable/instruction_background"
         android:padding="10dp"
         android:text="Klicken Sie auf den Start Button."
         android:textAlignment="center"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@id/check"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@id/instructionHeadline"
         app:layout_constraintTop_toBottomOf="@+id/instructionHeadline" />
 
     <TextView
