--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -81,25 +81,24 @@
         android:id="@+id/check"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="20dp"
         android:src="@drawable/check"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/instructionHeadline" />
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toStartOf="@id/instruction"
+        app:layout_constraintTop_toTopOf="@id/instruction"
+        app:layout_constraintBottom_toBottomOf="@id/instruction"/>
 
     <TextView
         android:id="@+id/instruction"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="40dp"
         android:background="@drawable/instruction_background"
         android:padding="10dp"
-        android:text="Drücken Sie den Start Button."
+        android:text="Klicken Sie auf den Start Button."
         android:textAlignment="center"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@id/check"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@id/instructionHeadline"
         app:layout_constraintTop_toBottomOf="@+id/instructionHeadline" />
 
     <!-- Calibrate Button -->
